force-app/main/default/objects/Event_Attendee__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the hospital/site is an existing account in Salesforce, then lookup and select the appropriate record. When the record is saved, the account name will populate in the attendee details section.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>