force-app/main/default/objects/Event_Attendee__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Company Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>