force-app/main/default/objects/Event_Attendee__c/fields/Attendee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_First_Name__c</fullName>
    <label>Attendee First Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>