force-app/main/default/objects/Event_Attendee__c/fields/Attendee_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Suffix__c</fullName>
    <label>Attendee Suffix</label>
    <length>45</length>
    <type>Text</type>
</CustomField>