force-app/main/default/objects/Event_Attendee__c/fields/Attendee_Title__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Title__c</fullName>
    <label>Attendee Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>