force-app/main/default/objects/Event_Attendee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If yo know the attendee is an  existing contact in Salesforce, then search for and select that user. The contact&apos;s details will automatically populate the Attendee detail fields</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>