force-app/main/default/objects/Event_Attendee__c/fields/Exhibitor__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibitor</label>
    <type>Checkbox</type>
</CustomField>