force-app/main/default/objects/Event_Attendee__c/fields/Found_Account__c.field-meta.xml
<CustomField>
    <fullName>Found_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Found Account</label>
    <type>Checkbox</type>
</CustomField>