force-app/main/default/objects/Event_Attendee__c/fields/Health_System__c.field-meta.xml
<CustomField>
    <fullName>Health_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health System</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Member_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>