force-app/main/default/objects/Event_Attendee__c/fields/Presentation_Topic__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Topic__c</fullName>
    <label>Presentation Topic</label>
    <type>TextArea</type>
</CustomField>