force-app/main/default/objects/Event_Attendee__c/fields/Speaker_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Presenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speaker/Presenter</label>
    <type>Checkbox</type>
</CustomField>