force-app/main/default/objects/Event_Attendee__c/fields/Type_of_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Presenter__c</fullName>
    <label>Type of Presenter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keynote Speaker</fullName>
            </value>
            <value>
                <fullName>Workshop Presenter</fullName>
            </value>
            <value>
                <fullName>Panelist</fullName>
            </value>
            <value>
                <fullName>Patient Story</fullName>
            </value>
            <value>
                <fullName>Poster Presentation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>