force-app/main/default/objects/Event_Attendee__c/fields/Viewed_Recording__c.field-meta.xml
<CustomField>
    <fullName>Viewed_Recording__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Viewed recorded webinar in a trackable way, e.g., on GoToWebinar. Watching on YouTube is not trackable.</description>
    <inlineHelpText>Viewed recorded webinar in a trackable way, e.g., on GoToWebinar. Watching on YouTube is not trackable.</inlineHelpText>
    <label>Viewed Recording</label>
    <type>Checkbox</type>
</CustomField>