force-app/main/default/objects/Event_Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendee_First_Name__c</columns>
    <columns>Attendee_Last_Name__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Attendee_Email__c</columns>
    <columns>Attended__c</columns>
    <columns>Event__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>